objects/PradeepNew__c.object
<CustomObject>
    <fields>
        <fullName>PickList1__c</fullName>
        <label>PickList1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                    <label>P12</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickList2__c</fullName>
        <label>PickList2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickList3__c</fullName>
        <label>PickList3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PradeepNew</label>
    <nameField>
        <label>Pradeep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PradeepNews</pluralLabel>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>false</active>
        <label>RecordType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>